--- a/style.css
+++ b/style.css
@@ -35,21 +35,26 @@ body{
 }
 
 main{
-    background-color: gray;
     width: 70vw;
     height: 70vh;
-    margin: auto;
-   
-    margin-top:10%;
-    padding-left: 10%;
-    background-color:white;
+    margin: 60px auto;
+    padding-left: 5%;
     border-radius: 5px;
+    position: relative;
 }
     
 
 .bottoni-up{
-    margin: 10px 10px;
+    margin: auto;
     height: 30px;
+    background-color: white;
+    margin-bottom: 10px;
+    padding-left: 50px;
+}
+
+.toboo{
+    background-color:white;
+    padding-left: 50px;
 }
 
 
